Fixes #48: Barrierefreiheit: Textgröße Änderbarkeit. Add z-index to filtermenu to avoid overlap errors when page is zoomed. Use REM values for filter width

--- a/core51/core.responsive.css
+++ b/core51/core.responsive.css
@@ -56,6 +56,10 @@ body { padding: 0; margin: 0; }
 
 #favlistlink { display: inline-block; padding: 2px; }
 
+ul.dropdown ul {
+	width: 16rem;
+}
+
 /* Contentarea */
 #wisy_contentarea { padding: 0; }
 .wisyr_indent { margin-left: 1em; vertical-align: top; }
@@ -88,7 +92,7 @@ body { padding: 0; margin: 0; }
 #wisy_searchbtn { margin-top: 15px; }
 .wisy_searchhints {
 	position: absolute;
-	bottom: -30px;
+	bottom: -2rem;
 	left: 0;
 }
 
@@ -380,8 +384,8 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 .wisyr_filterform form > fieldset {
 	position: relative;
 	display: inline-block;
-	width: 110px;
-	height: 28px;
+	width: 7rem;
+	height: 1.75rem;
 	border: 0;
 	border-radius: 2px;
 	background: #EEE;
@@ -404,7 +408,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 	top: 0.3em;
 }
 
-.wisyr_filterform form > fieldset.filter_weiterekriterien { width: 140px; }
+.wisyr_filterform form > fieldset.filter_weiterekriterien { width: 9rem; }
 .wisyr_filterform form > fieldset.filter_weiterekriterien:after { content: '+'; font-family: 'Roboto', sans-serif; }
 
 .wisyr_filterform form > fieldset.filter_weiterekriterien .filter_inner {
@@ -496,7 +500,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 	margin-bottom: 1em;
 }
 
-.wisyr_radiowrapper { display: block; }
+.wisyr_radiowrapper { display: block; white-space: nowrap; }
 
 .wisyr_filterform form > fieldset select {
 	line-height: 1.5;
@@ -526,7 +530,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 }
 
 .wisyr_filterform .filter_zweispaltig .filter_inner,
-.wisyr_filterform .filter_breit .filter_inner { width: 337px; }
+.wisyr_filterform .filter_breit .filter_inner { width: 21rem; }
 .filter_spalte1,
 .filter_spalte2 { float: left; width: 50%; }
 
@@ -600,7 +604,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 /* Anbieter und andere Radiolinklisten */
 
 .wisyr_filterradiolinklist .filter_inner {
-	width: 420px;
+	width: 26rem;
 	max-height: 50vh;
 	overflow-y: scroll;
 	list-style-type: none;
@@ -625,7 +629,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 /* Aktive Filter */
 .wisyr_activefilters {
 	position: absolute;
-	top: 65px;
+	top: 4.5rem;
 	left: 0;
 	list-style-type: none;
 	padding: 0;
@@ -647,7 +651,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 	padding: 0.5em 1.5em 0.5em 0.5em;
 	
 	display: block;
-	max-width: 140px;
+	max-width: 9rem;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -669,7 +673,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 
 @media screen and (min-width: 761px) {
 	.wisyr_filterform .ui-selectmenu-menu .ui-widget.ui-widget-content {
-		max-width: 337px;
+		max-width: 26rem;
 	}
 }
 @media screen and (max-width: 840px) {
@@ -807,7 +811,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 	
 	.wisyr_filterform .ui-selectmenu-button { width: 100%; }
 	
-	.wisyr_filterform form > fieldset.filter_weiterekriterien { width: 100%; }
+	.wisyr_filterform form > fieldset.filter_weiterekriterien { width: 100%; z-index: 1112!important; }
 	.wisyr_filterform form > fieldset.filter_weiterekriterien:after { display: none; }
 	.wisyr_filterform form > fieldset.filter_weiterekriterien fieldset { 
 		position: relative;
@@ -840,7 +844,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 	.wisyr_filterform form > fieldset.filter_weiterekriterien > .filter_inner > .no_autosubmit_mobile.active + .filter_filtersection_submit { 
 		display: block;
 		position: absolute;
-		z-index: 111;
+		z-index: 1114!important;
 	    margin: 0 15px;
 	    width: calc(100% - 30px);
 	}
@@ -870,7 +874,7 @@ body:not(:-moz-handler-blocked) .wisyr_filterform fieldset { display: table-cell
 		box-shadow: none;
 		padding: 0;
 		margin: 0!important;
-		z-index: 111;
+		z-index: 1114!important;
 		background: #eee!important;
 	}
 	.wisyr_filterform fieldset.active:after { display: none!important; }
